--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.1.2",
     "@types/styled-components": "^5.1.34",
     "expo": "^52.0.46",
+    "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "styled-components": "^6.1.16",
-    "expo-media-library": "~17.0.6"
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
