--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@firebase/auth": "^1.10.6",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.3.10",
@@ -18,6 +20,7 @@
     "expo": "^52.0.46",
     "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.8.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
